--- a/src/cryptoadvance/specter/static/styles.css
+++ b/src/cryptoadvance/specter/static/styles.css
@@ -520,6 +520,33 @@ input:hover{
 .flex-item{
     margin: 0.5em;
 }
+.balances-left-titles{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    align-items: center;
+}
+.balances-right-amounts{
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.balances{
+    display: flex;
+    line-height: 10px;
+    width: 25em;
+    padding: 15px;
+    background: var(--cmap-bg-lighter);
+    border: 2px solid var(--cmap-border);
+    border-radius: 4px;
+    color: #fff;
+    font-size: 1rem;
+    margin: 5px;
+}
+.balances:hover{
+    border: 2px solid hsl(217, 15%, 55%);
+}
 .small-card{
     min-width: 220px;
     /*height: 250px;*/
