--- a/src/cryptoadvance/specter/static/styles.css
+++ b/src/cryptoadvance/specter/static/styles.css
@@ -524,18 +524,17 @@ input:hover{
 .balances{
     display: flex;
     line-height: 13px;
-    padding: 15px;
     padding-left: 5%;
+    padding-bottom: 1.3em;
     width: 27em;
     background: var(--cmap-bg-lighter);
     border: 2px solid var(--cmap-border);
     border-radius: 4px;
     color: #fff;
-    font-size: 1rem;
     margin: 5px;
 }
 .balances-cell{
-    height: 1.5em;
+    height: 0.5em;
     padding-top: 0.5em;
 }
 .smaller-card:hover{
