--- a/src/cryptoadvance/specter/static/styles.css
+++ b/src/cryptoadvance/specter/static/styles.css
@@ -536,7 +536,8 @@ input:hover{
 .balances-cell{
     display: flex;
     width: 100%;
-    height: 0.5em;
+    height: 0.6em;
+    line-height: 20px;
     padding-top: 0.5em;
 }
 .balances-integer{
@@ -549,7 +550,6 @@ input:hover{
 .balances-decimals{
     width: 30%;
     text-align: start;
-    background-color: #27b1f0;
 }
 .balances-unit{
     width: 10%;
